--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/camera": "^4.5.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-ionic": "^4.0.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -43,7 +45,8 @@
         "APP_ID": "29c2abb6",
         "CHANNEL_NAME": "Master",
         "UPDATE_METHOD": "auto"
-      }
+      },
+      "cordova-plugin-camera": {}
     }
   }
 }
