--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/camera": "^4.5.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/file": "^4.5.3",
+    "@ionic-native/file-path": "^4.5.3",
+    "@ionic-native/file-transfer": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "cordova-plugin-camera": "^4.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-filepath": "^1.2.0",
     "cordova-plugin-ionic": "^4.0.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -46,7 +52,10 @@
         "CHANNEL_NAME": "Master",
         "UPDATE_METHOD": "auto"
       },
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-file-transfer": {}
     }
   }
 }
